路由视图基本完成

--- a/GlsunView/Views/OLPCard/Details.cshtml
+++ b/GlsunView/Views/OLPCard/Details.cshtml
@@ -204,8 +204,8 @@
                         <td class="label2">返回模式：</td>
                         <td class="value2">
                             <select  id="Back_Mode" name="Back_Mode">
-                                <option value="0")>自动不回切</option>
-                                <option value="1")>自动回切</option>
+                                <option value="0")>自动不返回</option>
+                                <option value="1")>自动返回</option>
                             </select>
                         </td>
                         <td class="separator"></td>
