拓扑社图点击设备连续跳转到路由视图

--- a/GlsunView/Views/Route/Index.cshtml
+++ b/GlsunView/Views/Route/Index.cshtml
@@ -97,7 +97,7 @@
         <input type="text" id="txtStatus" value="备线路监测正常">
         <select id="Back_Mode" name="Back_Mode">
             <option value="0">自动不返回（双纤）</option>
-            <option value="1" )>自动回切（双纤）</option>
+            <option value="1" )>自动返回（双纤）</option>
         </select>
         <input type="button" id="btnOK" value="确定">
     </div>
