--- a/GlsunView/Views/HistoryAlarm/Index.cshtml
+++ b/GlsunView/Views/HistoryAlarm/Index.cshtml
@@ -134,7 +134,7 @@
                 updateAlarm();
             });
             hTimer = setInterval(function () {
-                updateAlarm();
+                //updateAlarm();
             }, 1000);
             //选中标记
             $(".table-data tbody tr").click(function () {
