--- a/GlsunView/Content/css/alertBox.css
+++ b/GlsunView/Content/css/alertBox.css
@@ -22,3 +22,8 @@
     background-color: #dff0d8;
     border-color: #d6e9c6;
 }
+.alert-warning{
+    color: #f38405;
+    background-color: #edf39e;
+    border-color: #dce652;
+}
