--- a/GlsunView/Views/CurrentAlarm/Index.cshtml
+++ b/GlsunView/Views/CurrentAlarm/Index.cshtml
@@ -122,7 +122,7 @@
                 updateAlarm();
             });
             hTimer = setInterval(function () {
-                //updateAlarm();
+                updateAlarm();
             }, 1000);
             //选中标记
             $(".table-data tbody tr").click(function () {
