树形控件与列表内容超出隐藏

--- a/GlsunView/Views/Shared/_ListView.cshtml
+++ b/GlsunView/Views/Shared/_ListView.cshtml
@@ -21,6 +21,7 @@
             border: 1px solid #ccc;
             float: left;
             margin: 5px;
+            overflow: hidden;
         }
 
         .list-view li:hover {
