--- a/GlsunView/Views/Shared/_ViewLayout.cshtml
+++ b/GlsunView/Views/Shared/_ViewLayout.cshtml
@@ -39,6 +39,7 @@
             border: 1px solid #ccc;
             border-bottom-left-radius: 5px;
             border-top-left-radius: 5px;
+            overflow: hidden;
         }
 
         .container-right {
